ui/css/logviewer.css
/* This Source Code Form is subject to the terms of the Mozilla Public
* License, v. 2.0. If a copy of the MPL was not distributed with this
* file, You can obtain one at http://mozilla.org/MPL/2.0/. */

body {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    min-width: 240px;
    padding-top: 15px;
}

/* Suppress selected angular templates until they compile */
[ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
    display: none !important;
}

/*Log Viewer*/

.lv-line-no {
    width: 3em;
}

.lv-error-line {
    background-color: white;
    color: #333333;
    width: 100%;
}

.lv-error-line span:nth-child(2) {
    white-space: normal;
}

.lv-log-container {
    height: 100%;
    width: 100%;
    overflow: auto;
    bottom: 0;
    font-family: monospace;
    font-size: small;
    white-space: nowrap;
    background: #f8f8f8;
}

.lv-log-container > div:nth-child(even) {
    background: #fff;
}

.lv-log-line {
    width: 100%;
    padding: 0 18px;
}

.text-danger {
    color: #db0000;
}

.lv-line-highlight {
    background-color: LightGrey;
}

.run-data {
    width: 100%;
    background-color: #FFF;
    padding: 20px 5px 4px;
    display: table-row;
    font-size: 12px;
}

.run-data .break-word{
    -ms-word-break: break-all;
    word-break: break-all;

    /* Non standard for webkit */
    word-break: break-word;

    -webkit-hyphens: auto;
    -moz-hyphens: auto;
    hyphens: auto;
}
.run-data .steps-data {
    max-height: 210px;
    overflow: auto;
    border-color: #dddddd;
    border-width: 1px;
    border-style: solid none;
}

.logviewer-step {
    border-radius: 2px;
    overflow: hidden;
    -webkit-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
    -o-user-select: text;
    user-select: text;
    white-space: normal;
    font-size: 12px;
}

.logviewer-step.selected {
    color: #232323;
    background-color: #FFF;
}

.logviewer-step.btn-success.selected {
    border-color: #398439;
}

.logviewer-step.btn-warning.selected {
    border-color: #d58512;
}

.logviewer-stepbar {
    display: inline-block;
    margin: 8px 8px 8px 0px;
    padding: 6px 8px;
    border: 1px solid #dddddd;
}

.logviewer-stepbar span {
    color: #9fa3a5;
}

.logviewer-stepbar a:hover,
.logviewer-stepbar a:focus {
    text-decoration: none;
}

.logviewer-stepbar .raw-log {
    padding-right: 5px;
}

.logviewer-stepbar input[type="checkbox"] {
    margin: 0;
}

.lv-line-no.label {
    border-radius: 0px;
    margin: 0em 0.6em 0em 0em;
}

.lv-log-msg {
    position: relative;
    padding: 26px 0 0 20px;
    font-weight: bold;
    font-family: sans-serif;
    font-size: 12px;
}

.lv-log-msg-step {
    padding: 2px 5px;
    background: #fff;
    border: solid #f0ad4e;
    border-width: 4px 2px 2px;
    border-radius: 2px;
}

.lv-log-overlay {
    padding: 6px;
    border: 2px solid #4cae4c;
    border-radius: 3px;
    background: #fff;
}

.lv-log-error {
    border: 2px solid #ff0000;
}
.job-header{
    max-height:270px;
    overflow-y:auto;
}

